--- a/app/src/main/res/layout/item_dropdown_general.xml
+++ b/app/src/main/res/layout/item_dropdown_general.xml
@@ -3,18 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="@dimen/view_elevation_16"
-    android:background="@color/color_secondary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/pgLoading"
-        android:indeterminateTint="@color/color_primary"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="@dimen/view_padding_8"
+        android:ellipsize="end"
+        android:maxLines="1"
+        tools:text="Item"
+        android:textAppearance="?attr/textAppearanceSubtitle1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
