--- a/app/src/main/res/layout/fragment_checkout_cart.xml
+++ b/app/src/main/res/layout/fragment_checkout_cart.xml
@@ -103,7 +103,7 @@
         app:iconGravity="textStart"
         android:layout_marginHorizontal="@dimen/view_margin_default"
         android:layout_marginTop="@dimen/view_margin_default"
-        android:layout_marginBottom="@dimen/view_margin_default"
+        android:layout_marginBottom="@dimen/view_margin_max"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
