--- a/app/src/main/res/layout/fragment_payment_detail.xml
+++ b/app/src/main/res/layout/fragment_payment_detail.xml
@@ -154,6 +154,7 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/text_card_expire_date_title"
                             android:inputType="text"
+                            android:tag="@string/text_card_expire_date_format"
                             tools:text="24/07"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -379,6 +380,7 @@
                             android:hint="@string/text_delivery_phone_title"
                             android:inputType="text"
                             android:maxLength="50"
+                            android:tag="@string/text_phone_format"
                             tools:text="958785478"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
