--- a/app/src/main/res/layout/fragment_expose_sale_history.xml
+++ b/app/src/main/res/layout/fragment_expose_sale_history.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.fragment.ExposeSaleHistoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSaleHistory"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/color_secondary"
+        tools:listitem="@layout/item_expose_sale_history"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</FrameLayout>
+    <include
+        android:visibility="gone"
+        android:id="@+id/lyProgressBar"
+        layout="@layout/layout_progress_bar"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
