--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -160,6 +160,7 @@
     <dimen name="image_view_thumbnail_checkout_cart_width">80dp</dimen>
     <dimen name="image_view_thumbnail_checkout_cart_height">105dp</dimen>
     <dimen name="image_view_thumbnail_payment_cart_height">200dp</dimen>
+    <dimen name="image_view_thumbnail_sale_history_height">80dp</dimen>
     <dimen name="image_view_icon_favorite_size">@dimen/view_size_16</dimen>
     <dimen name="image_view_icon_delete">@dimen/view_size_18</dimen>
     <dimen name="image_view_icon_quantity_cart_size">@dimen/view_size_12</dimen>
