--- a/app/src/main/res/layout/fragment_invoice_detail.xml
+++ b/app/src/main/res/layout/fragment_invoice_detail.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.view.fragment.InvoiceDetailFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvProduct"
+        android:id="@+id/rvDetail"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/view_margin_default"
